--- a/src/app/pages/ui-components/distributors/distributors.component.html
+++ b/src/app/pages/ui-components/distributors/distributors.component.html
@@ -34,6 +34,34 @@
 
   <mat-card-content class="b-t-1">
     <div class="table-responsive m-t-16">
+      <div class="import-result-container m-t-16" *ngIf="showImportResult && importResult">
+        <div class="import-result-header">
+          <h4>Import Result</h4>
+          <button mat-icon-button class="close-btn" (click)="resetImportResult()">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
+        <div class="import-result-body">
+          <div class="result-item success">
+            <mat-icon>check_circle</mat-icon>
+            <span>Successful rows: {{ importResult.successCount }}</span>
+          </div>
+          <div class="result-item warning">
+            <mat-icon>warning</mat-icon>
+            <span>Skipped rows: {{ importResult.skippedCount }}</span>
+            <ul class="details-list" *ngIf="importResult.skippedRows && importResult.skippedRows.length > 0">
+              <li *ngFor="let row of importResult.skippedRows">{{ row }}</li>
+            </ul>
+          </div>
+          <div class="result-item error">
+            <mat-icon>error</mat-icon>
+            <span>Errors: {{ importResult.errors?.length || 0 }}</span>
+            <ul class="details-list" *ngIf="importResult.errors && importResult.errors.length > 0">
+              <li *ngFor="let error of importResult.errors">{{ error }}</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <mat-form-field class="w-100" appearance="outline">
         <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search....">
       </mat-form-field>
@@ -65,6 +93,11 @@
         <ng-container matColumnDef="distributorName">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Distributor Name</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Address</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.address }}</td>
         </ng-container>
 
         <ng-container matColumnDef="province">
