--- a/src/app/pages/ui-components/orders/orders.component.html
+++ b/src/app/pages/ui-components/orders/orders.component.html
@@ -2,43 +2,46 @@
   <mat-card-header>
     <mat-card-title class="m-b-0">Orders</mat-card-title>
     <span class="flex-1-auto"></span>
-    <button mat-flat-button color="accent" matTooltipPosition="left" class="m-l-8" matTooltipHideDelay="100000" (click)="triggerFileInput()">
+    <button mat-flat-button color="accent" matTooltipPosition="left" class="m-l-8" matTooltipHideDelay="100000"
+      (click)="triggerFileInput()">
       <mat-icon>upload_file</mat-icon> <span class="d-none d-sm-inline">Import from Excel</span>
     </button>
     <input type="file" #fileInput style="display: none" (change)="onFileChange($event)" accept=".xlsx, .xls" />
-    <button mat-flat-button color="accent" matTooltipPosition="left" class="m-l-8" matTooltipHideDelay="100000" (click)="downloadTemplate()">
+    <button mat-flat-button color="accent" matTooltipPosition="left" class="m-l-8" matTooltipHideDelay="100000"
+      (click)="downloadTemplate()">
       <mat-icon>download</mat-icon> <span class="d-none d-sm-inline">Download Template</span>
     </button>
   </mat-card-header>
 
-  <mat-card-content class="b-t-1"><div class="import-result-container m-t-16" *ngIf="showImportResult && importResult">
-    <div class="import-result-header">
-      <h4>Import Result</h4>
-      <button mat-icon-button class="close-btn" (click)="resetImportResult()">
-        <mat-icon>close</mat-icon>
-      </button>
+  <mat-card-content class="b-t-1">
+    <div class="import-result-container m-t-16" *ngIf="showImportResult && importResult">
+      <div class="import-result-header">
+        <h4>Import Result</h4>
+        <button mat-icon-button class="close-btn" (click)="resetImportResult()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+      <div class="import-result-body">
+        <div class="result-item success">
+          <mat-icon>check_circle</mat-icon>
+          <span>Successful rows: {{ importResult.successCount }}</span>
+        </div>
+        <div class="result-item warning">
+          <mat-icon>warning</mat-icon>
+          <span>Skipped rows: {{ importResult.skippedCount }}</span>
+          <ul class="details-list" *ngIf="importResult.skippedRows && importResult.skippedRows.length > 0">
+            <li *ngFor="let row of importResult.skippedRows">{{ row }}</li>
+          </ul>
+        </div>
+        <div class="result-item error">
+          <mat-icon>error</mat-icon>
+          <span>Errors: {{ importResult.errors?.length || 0 }}</span>
+          <ul class="details-list" *ngIf="importResult.errors && importResult.errors.length > 0">
+            <li *ngFor="let error of importResult.errors">{{ error }}</li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="import-result-body">
-      <div class="result-item success">
-        <mat-icon>check_circle</mat-icon>
-        <span>Successful rows: {{ importResult.successCount }}</span>
-      </div>
-      <div class="result-item warning">
-        <mat-icon>warning</mat-icon>
-        <span>Skipped rows: {{ importResult.skippedCount }}</span>
-        <ul class="details-list" *ngIf="importResult.skippedRows && importResult.skippedRows.length > 0">
-          <li *ngFor="let row of importResult.skippedRows">{{ row }}</li>
-        </ul>
-      </div>
-      <div class="result-item error">
-        <mat-icon>error</mat-icon>
-        <span>Errors: {{ importResult.errors?.length || 0 }}</span>
-        <ul class="details-list" *ngIf="importResult.errors && importResult.errors.length > 0">
-          <li *ngFor="let error of importResult.errors">{{ error }}</li>
-        </ul>
-      </div>
-    </div>
-  </div>
     <!-- Bộ lọc -->
     <div class="filters m-t-16 m-b-16">
       <!-- Hàng 1: Start Date | End Date -->
@@ -66,14 +69,21 @@
         <div class="col-12 col-md-6 col-lg-3">
           <mat-form-field appearance="outline" class="filter-field" floatLabel="always">
             <mat-label>Distributor</mat-label>
-            <mat-select [(value)]="selectedDistributorId">
+            <input type="text" matInput [matAutocomplete]="autoDistributor" [(ngModel)]="distributorKeyword"
+                   (input)="filterDistributors()">
+          
+            <mat-autocomplete #autoDistributor="matAutocomplete" [displayWith]="displayDistributorName"  (optionSelected)="onDistributorSelected($event)">
               <mat-option [value]="null">All</mat-option>
-              <mat-option *ngFor="let distributor of distributors" [value]="distributor.id">
+              <mat-option *ngFor="let distributor of filteredDistributors" [value]="distributor">
                 {{ distributor.distributorName }}
               </mat-option>
-            </mat-select>
+            </mat-autocomplete>
           </mat-form-field>
+          <!-- <app-filter-select [label]="'Distributor'" [dataSource]="distributors" [displayField]="'distributorName'"
+            [valueField]="'id'" (selectionChange)="onDistributorSelected($event)">
+          </app-filter-select> -->
         </div>
+
         <div class="col-12 col-md-6 col-lg-3">
           <mat-form-field appearance="outline" class="filter-field" floatLabel="always">
             <mat-label>Area</mat-label>
@@ -88,12 +98,15 @@
         <div class="col-12 col-md-6 col-lg-3">
           <mat-form-field appearance="outline" class="filter-field" floatLabel="always">
             <mat-label>Product</mat-label>
-            <mat-select [(value)]="selectedProductInformationId">
+            <input type="text" matInput [matAutocomplete]="autoProduct" [(ngModel)]="productKeyword"
+                   (input)="filterProducts()">
+          
+            <mat-autocomplete #autoProduct="matAutocomplete" [displayWith]="displayProductName" (optionSelected)="onProductInfomationSelected($event)">
               <mat-option [value]="null">All</mat-option>
-              <mat-option *ngFor="let product of productInformations" [value]="product.id">
+              <mat-option *ngFor="let product of filteredProducts" [value]="product">
                 {{ product.productName }}
               </mat-option>
-            </mat-select>
+            </mat-autocomplete>
           </mat-form-field>
         </div>
         <div class="col-12 col-md-6 col-lg-3">
@@ -127,7 +140,7 @@
     </div>
     <div class="table-responsive m-t-16">
       <mat-form-field class="w-100" appearance="outline">
-        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search...">
+        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search by Order Code">
       </mat-form-field>
     </div>
 
@@ -148,8 +161,10 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Status</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            <ng-container *ngIf="element.status === 0 || element.status === 1 || element.status === 2; else nonClickableStatus">
-              <a [routerLink]="['/ui-components/order-details', element.id]" [ngClass]="getStatusClass(element.status)" class="status-link">
+            <ng-container
+              *ngIf="element.status === 0 || element.status === 1 || element.status === 2; else nonClickableStatus">
+              <a [routerLink]="['/ui-components/order-details', element.id]" [ngClass]="getStatusClass(element.status)"
+                class="status-link">
                 {{ getStatusText(element.status) }}
               </a>
             </ng-container>
@@ -164,51 +179,65 @@
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Order Code</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderCode }}</td>
         </ng-container>
-        <ng-container matColumnDef="exportDate">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Export Date</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.exportDate | date: 'dd/MM/yyyy' }}</td>
-        </ng-container>
+        
         <ng-container matColumnDef="quantityVehicle">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Count</th>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Vehicle Count</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverNumber }}</td>
         </ng-container>
         <ng-container matColumnDef="vehicleNumber">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Vehicle Number</th>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Vehicle Number
+          </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.vehicleNumber }}</td>
         </ng-container>
-        <ng-container matColumnDef="driverName">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Name</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverName }}</td>
-        </ng-container>
-        <ng-container matColumnDef="driverPhoneNumber">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Phone Number</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverPhoneNumber }}</td>
-        </ng-container>
-        <ng-container matColumnDef="weightOrder">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Weight (kg)</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.requestedWeight }}</td>
-        </ng-container>
-        <ng-container matColumnDef="unitOrder">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Quantity (bags)</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.requestedUnits }}</td>
-        </ng-container>
-        <ng-container matColumnDef="manufactureDate">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Manufacture Date</th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.manufactureDate | date: 'dd/MM/yyyy' }}</td>
+        <ng-container matColumnDef="productCode">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Product Code</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.productCode || 'N/A' }}</td>
         </ng-container>
         <ng-container matColumnDef="productName">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Product Name</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.productName || 'N/A' }}</td>
         </ng-container>
+        <ng-container matColumnDef="weightOrder">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Weight (kg)</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.requestedWeight | number }}</td>
+        </ng-container>
+        <ng-container matColumnDef="unitOrder">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Quantity (bags)
+          </th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.requestedUnits }}</td>
+        </ng-container>
         <ng-container matColumnDef="distributorName">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Distributor Name</th>
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Distributor Name
+          </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorName || 'N/A' }}</td>
         </ng-container>
         <ng-container matColumnDef="area">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Area</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.area || 'N/A' }}</td>
         </ng-container>
-
+        <ng-container matColumnDef="driverName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverName }}</td>
+        </ng-container>
+        <ng-container matColumnDef="driverPhoneNumber">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Driver Phone
+            Number</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverPhoneNumber }}</td>
+        </ng-container>
+        
+        <ng-container matColumnDef="manufactureDate">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Manufacture Date
+          </th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.manufactureDate | date:
+            'dd/MM/yyyy' }}</td>
+        </ng-container>
+        
+       
+        <ng-container matColumnDef="exportDate">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Export Date</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.exportDate | date: 'dd/MM/yyyy' }}</td>
+        </ng-container>
+        
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
