--- a/src/app/pages/ui-components/orders/orders.component.html
+++ b/src/app/pages/ui-components/orders/orders.component.html
@@ -231,7 +231,16 @@
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderDetail?.manufactureDate | date:
             'dd/MM/yyyy' }}</td>
         </ng-container>
-        
+        <ng-container matColumnDef="createdByName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Created By
+          </th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.createdByName }}</td>
+        </ng-container>
+        <ng-container matColumnDef="updatedByName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Updated By
+          </th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.updatedByName }}</td>
+        </ng-container>
        
         <ng-container matColumnDef="exportDate">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Export Date</th>
