--- a/src/app/pages/ui-components/products/products.component.html
+++ b/src/app/pages/ui-components/products/products.component.html
@@ -88,7 +88,7 @@
               Product Date
             </th>
             <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.productDate | date: 'yyyy-MM-dd' }}
+              {{ element.productInformation.createdAt | date: 'yyyy-MM-dd' }}
             </td>
           </ng-container>
   
