--- a/src/app/pages/ui-components/products/products.component.html
+++ b/src/app/pages/ui-components/products/products.component.html
@@ -3,7 +3,7 @@
       <mat-card-title class="m-b-0">Products</mat-card-title>
       <span class="flex-1-auto"></span>
   
-      <button
+      <!-- <button
         mat-flat-button
         color="primary"
         matTooltipPosition="left"
@@ -12,7 +12,7 @@
         (click)="addProduct()"
       >
         <mat-icon>add</mat-icon> <span fxHide.xs>Create new product</span>
-      </button>
+      </button> -->
     </mat-card-header>
   
     <mat-card-content class="b-t-1">
@@ -92,7 +92,7 @@
             </td>
           </ng-container>
   
-          <ng-container matColumnDef="delivery">
+          <!-- <ng-container matColumnDef="delivery">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
               Delivery
             </th>
@@ -108,7 +108,7 @@
             <td mat-cell *matCellDef="let element" class="mat-body-1">
               {{ element.stockOut }}
             </td>
-          </ng-container>
+          </ng-container> -->
   
           <!-- <ng-container matColumnDef="isActive">
             <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
