--- a/src/app/pages/ui-components/inbound/inbound.component.html
+++ b/src/app/pages/ui-components/inbound/inbound.component.html
@@ -30,10 +30,17 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Inbound Date</th>
           <td mat-cell *matCellDef="let element">{{ element.inboundDate | date: 'yyyy-MM-dd HH:mm' }}</td>
         </ng-container>
+        <!-- <ng-container matColumnDef="createdByName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Created By</th>
+          <td mat-cell *matCellDef="let element">{{ element.createdByName }}</td>
+        </ng-container> -->
         <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-          <td mat-cell *matCellDef="let element">{{ element.createdAt | date: 'yyyy-MM-dd HH:mm' }}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At | By</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.createdAt | date: 'yyyy-MM-dd HH:mm' }} | {{ element.createdByName }}
+          </td>
         </ng-container>
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
