--- a/src/app/pages/ui-components/outbound/outbound.component.html
+++ b/src/app/pages/ui-components/outbound/outbound.component.html
@@ -31,8 +31,8 @@
           <td mat-cell *matCellDef="let element">{{ element.outboundDate | date: 'yyyy-MM-dd HH:mm' }}</td>
         </ng-container>
         <ng-container matColumnDef="createdAt">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At</th>
-          <td mat-cell *matCellDef="let element">{{ element.createdAt | date: 'yyyy-MM-dd HH:mm' }}</td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Created At | By</th>
+          <td mat-cell *matCellDef="let element">{{ element.createdAt | date: 'yyyy-MM-dd HH:mm' }} | {{element.createdByName}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
